[package]
name = "async-hal"
version = "0.1.0-alpha.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Async hardware abstraction layer for embedded devices"
repository = "https://github.com/matthunz/async-hal"

[features]
mock = []
nb = ["dep:nb", "void"]
default = ["bxcan", "mock", "nb"]

[dependencies]
bxcan = { version = "0.7.0", optional = true }
embedded-hal = "0.2.7"
fugit = "0.3.6"
futures = { version = "0.3.28", default-features = false }
nb = { version = "1.1.0", optional = true }
void = { version = "1.0.2", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.28.1", features = ["full"] }
