[package]
name = "async-hal"
version = "0.1.0-alpha.7"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Async hardware abstraction layer for embedded devices"
repository = "https://github.com/matthunz/async-hal"

[workspace]
members = [
    "./",
    "stm32"
]

[features]
mock = []
executor = []
nb = ["fugit", "dep:nb"]
full = ["bxcan", "executor", "mock", "nb"]

[dependencies]
bxcan = { version = "0.7.0", optional = true }
embedded-hal = "0.2.7"
fugit = { version =  "0.3.6", optional = true }
futures = { version = "0.3.28", default-features = false }
nb = { version = "1.1.0", optional = true }
pin-project-lite = "0.2.9"
void = { version = "1.0.2", default-features = false }

[package.metadata.docs.rs]
all-features = true
