[package]
name = "async-hal"
version = "0.1.0-alpha.10"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Async hardware abstraction layer for embedded devices"
repository = "https://github.com/matthunz/async-hal"

[features]
mock = []
can = []
delay = []
executor = []
io = []
serial = []
nb = ["fugit", "dep:nb"]
full = ["can", "delay", "executor", "io", "nb", "serial"]

[dependencies]
bxcan = { version = "0.7.0", optional = true }
embedded-hal = "0.2.7"
fugit = { version =  "0.3.6", optional = true }
futures = { version = "0.3.28", default-features = false }
nb = { version = "1.1.0", optional = true }
once_cell = { version = "1.18.0", default-features = false }
pin-project-lite = "0.2.9"
usb-device = "0.2.9"
void = { version = "1.0.2", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
