[package]
name = "async-hal-traffic-light"
version = "0.1.0"
edition = "2018"

[dependencies]
async-hal = { path = "../../", default-features = false, features = ["nb"] }
stm32f1xx-hal = { version = "0.10", features = ["rt", "stm32f103" ] }
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", features = ["device"] }
panic-halt = "0.2.0"
pin-utils = "0.1.0"
futures = { version = "0.3.28", default-features = false }
bxcan = "0.7.0"
nb = "1.1.0"

[[bin]]
name = "async-hal-traffic-light"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
lto = true # better optimizations
opt-level = "z"

